--- a/05ViagemChihiro/src/index.css
+++ b/05ViagemChihiro/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  color: white;
+  background-image: url("./src/assets/background.png");
+}
