--- a/05ViagemChihiro/src/index.css
+++ b/05ViagemChihiro/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  height: 100dvh;
+}
 .font-archivo {
   font-family: "Archivo", sans-serif;
 }
